fixed crash when player is fertile and pregnancy init P2P error
NullPointerException in tryImpregnateByHurting method

Problem:
The game crashed when a zombie, creeper or enderman attacked the player
in survival mode.
The error occurred in FemalePlayerImpl.tryImpregnateByHurting() at line
72.

Root cause:
Using computeInt() with ++newCount failed when the species key didn't
exist in the attacks map, as newCount was null on first attack, causing
NullPointerException when attempting increment operation.

Solution:
Replaced computeInt() with merge() method which handles both cases:
- First attack: directly inserts value 1
- Subsequent attacks: sums existing value + 1

This ensures the counter always has a valid integer value and prevents
null pointer exceptions.

Changed:
attacks.computeInt(species, (key, newCount) -> ++newCount)
To:
attacks.merge(species, 1, Integer::sum)

Pregnancy system not initializing in multiplayer P2P sex

Problem:
When two players had sex in multiplayer, the pregnancy was never
activated
for the female player. The pregnancy initializer timer never
incremented,
preventing the pregnancy system from initializing and applying the
PREGNANCY_P0 effect.

Root Cause:
The PlayerPregnancySystemHolder and PlayerPregnancyEffectsHolder
maintained
the 'isInitialized' flag as true from previous NBT data (e.g., after
player
death/respawn). When tryImpregnate() was called for a new pregnancy, the
system incorrectly believed it was already initialized, skipping the
timer
increment phase in PlayerEventHandler.onPlayerTick().

Solution:
- Added reset() method to PlayerPregnancySystemHolder
- Added reset() method to PlayerPregnancyEffectsHolder
- Modified FemalePlayerImpl.tryImpregnate() to call reset() on both
holders
- This ensures isInitialized = false for every new pregnancy
- Timer can now increment correctly (0 -> 300 ticks)
- Pregnancy system initializes after configured delay
- PREGNANCY_P0 effect applies correctly

--- a/src/main/resources/assets/minepreggo/lang/en_us.json
+++ b/src/main/resources/assets/minepreggo/lang/en_us.json
@@ -567,7 +567,10 @@
 
 	"chat.minepreggo.player.not_enough_fap.message": "You are 'dry'",
 
+	"chat.minepreggo.player.sex.request_sent": "You have sent a request to %s for some fun",
 	
+	"chat.minepreggo.player.sex.request_reject": "%s has rejected your request for some fun",
+
 	
 	"chat.minepreggo.scientific_illager.no_pregnant_entities": "There are no pregnant entities to checkup",
 
