--- a/src/main/resources/assets/minepreggo/lang/en_us.json
+++ b/src/main/resources/assets/minepreggo/lang/en_us.json
@@ -718,6 +718,8 @@
 	"chat.minepreggo.player.pregnancy.message.cannot_ride.generic.2": "Your belly is too big to ride now",
 	"chat.minepreggo.player.pregnancy.message.cannot_ride.ender_woman.generic.1": "Your belly is so big that it hits %s's head.",
 	"chat.minepreggo.player.pregnancy.message.cannot_ride.ender_woman.generic.2": "You weigh too much to ride %s.",
+	"chat.minepreggo.player.pregnancy.message.womb_is_overloaded.creative": "Your womb is overloaded, you will die if change to creative mode now!",
+
 	"chat.minepreggo.player.message.cannot_ride.ender_woman.pregnant.labor": "%s is in labor, you can't ride her now!",
 	"chat.minepreggo.player.message.cannot_ride.ender_woman.pregnant.morning_sickness": "%s is feeling too sick, you can't ride her now!",
 	"chat.minepreggo.player.message.cannot_ride.ender_woman.pregnant.common_pregnancy_pain": "%s is in too much pain, you can't ride her now!",
